--- a/podstrony/mapa.html
+++ b/podstrony/mapa.html
@@ -5,7 +5,7 @@
 		</head>
 		<body>
 			<map id="mapa_andrei">
-<area shape="rect" coords="11,14,92,56" href="../media/pepe2.gif">
+<area shape="rect" coords="11,14,92,56" href="../media/grogu.gif">
 <area shape="rect" coords="9,70,88,110" href="https://ptskiller.github.io/2k/podstrony/tabela_Dziamyanchyk.html" target="obszar_glowny">
 <area shape="circle" coords="17,158,83,158" href="https://ptskiller.github.io/2k/podstrony/formulasz_Dziamyanchyk.html" target="obszar_glowny">
 <area shape="poly" coords="23,256,50,199,75,255" href="mailto:mkryniew@ids.gda.pl">
