--- a/podstrony/mapa.html
+++ b/podstrony/mapa.html
@@ -6,10 +6,10 @@
 		<body>
 			<map id="mapa_andrei">
 <area shape="rect" coords="11,14,92,56" href="../media/grogu.gif">
-<area shape="rect" coords="9,70,88,110" href="https://ptskiller.github.io/2k/podstrony/tabela_Dziamyanchyk.html" target="obszar_glowny">
-<area shape="circle" coords="17,158,83,158" href="https://ptskiller.github.io/2k/podstrony/formulasz_Dziamyanchyk.html" target="obszar_glowny">
+<area shape="rect" coords="9,70,88,110" href="https://andrii2221.github.io/pw/Podstrony/Tabela.html" target="obszar_glowny">
+<area shape="circle" coords="17,158,83,158"href=https://andrii2221.github.io/pw/formularz.html" target="obszar_glowny">
 <area shape="poly" coords="23,256,50,199,75,255" href="mailto:mkryniew@ids.gda.pl">
-<area shape="circle" coords="33,277,64,277" href="https://ptskiller.github.io/sklepbizuteri/" target="obszar_glowny">
+<area shape="circle" coords="33,277,64,277"href=https://allegro.pl" target="obszar_glowny">
 </map>
 <img src="../media/mapka_andrei.png" alt="tutaj wybieraj linki" usemap="#mapa_andrei">
 		</body>
