--- a/podstrony/logo.html
+++ b/podstrony/logo.html
@@ -4,6 +4,6 @@
 			<meta charset="utf-8">
 		</head>
 		<body style="text-align: center;">
-			<img src="../media/logoandrei.png"  >
+			<img src="../media/logoandrzej.png"  >
 		</body>
 	</html>
