--- a/podstrony/logo.html
+++ b/podstrony/logo.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 		</head>
-		<body style="text-align: center;">
-			<img src="logoandrii.jpg"  >
+		<body>
+			<img src="logoandrii.jpg" width="25%" height="100%" border="1" align="left">
 		</body>
 	</html>
