--- a/podstrony/logo.html
+++ b/podstrony/logo.html
@@ -4,6 +4,6 @@
 			<meta charset="utf-8">
 		</head>
 		<body>
-			<img src="media/logoandrii.jpg" width="25%" height="100%" border="1" align="center">
+			<img src="media/logoandrzej.gif" width="25%" height="100%" border="1" align="center">
 		</body>
 	</html>
