--- a/podstrony/logo.html
+++ b/podstrony/logo.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-	<html>
-		<head>
-			<meta charset="utf-8">
-		</head>
-		<body>
-			<img src="media/logoandrzej.gif" width="25%" height="100%" border="1" align="center">
-		</body>
-	</html>
+<html>
+     <head>
+        <meta charset="utf-8">
+     </head>
+    <body>
+	 <img src="media/logoandrzej.gif" border=1 align="left">
+        <h1 align="center">Logo_Voichuk</h1>
+		<p align="center"><b>Gdansk,04-03-2023</b></p>
+    </body>
+</html>
