--- a/podstrony/logo.html
+++ b/podstrony/logo.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
      </head>
     <body>
-	 <img src="Logo_Voichuk.gif" border=1 align="left">
+	 <img src="media/logoandrzej.png" border=1 align="left">
         <h1 align="center">Logo_Voichuk</h1>
 		<p align="center"><b>Gdansk,04-03-2023</b></p>
     </body>
